<resources>
    <string name="app_name">DroidCafe V2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donut">Donuts are handmade and sprinkled with candy.</string>
    <string name="froyo">Froyo is the premium version of ice-cream.</string>
    <string name="sandwich">Made with chocolate and vanilla, one of the best desserts year round!</string>
    <string name="show_donut">You ordered a donut!</string>
    <string name="show_froyo">You ordered a froyo!</string>
    <string name="show_sandwich">You ordered an ice cream sandwich!</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your adress</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter your number</string>
    <string name="enter_note">Leave us a note!</string>
    <string name="note">Note:</string>
    <string name="delivery">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="action_order_message">Showing your orders.</string>
    <string name="action_status_message">Showing the status of your order!</string>
    <string name="action_favorites_message">Showing your favorties!</string>
    <string name="action_contact_message">You selected contact.</string>
    <string name="order_date">Order Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_activity_name">Order Activity</string>
</resources>